Fix overflow problem, fix #

--- a/src/app/components/lastfm/index.styl
+++ b/src/app/components/lastfm/index.styl
@@ -7,11 +7,12 @@
     margin 6px
     font-size 14px
     line-height 22px
-    white-space nowrap
-    overflow hidden
-    text-overflow ellipsis
 
     [data-dropdown]
+        display block
+        white-space nowrap
+        overflow hidden
+        text-overflow ellipsis
         color text-color
         &:before
             content url(http://cdn.last.fm/flatness/favicon.2.ico)
